# bubble

./: .gitignore  CMakeLists.txt  LICENSE  README.md  citation.cff  codecov.yml  requirements.txt
.github/workflows/: docs-deploy.yml  test_cases.yml
docs/: Doxyfile
src/: .clangd  avl_tree.h  avl_tree.hpp  bubble.h  bubble.hpp
tests/: CMakeLists.txt  avl.cc  bubble.cc  test_main.cc
tools/: catch.hpp
